src/cpp/inc/sqeazy.h

/*
	SQY_LZ4Decode - Decompress using LZ4.

	Decompresses the source buffer into the destination buffer using LZ4.
	The destination buffer should be allocated externally. The first 8 bytes of 
	the source buffer are not part of the LZ4 compressed buffer but indicate the
	length of the original uncompressed buffer.
	The necessary buffer length can be obtained by calling SQY_LZ4Length. 

	src 					: LZ4 compressed buffer (externally allocated)
	srclength 				: length in bytes of compressed buffer
	dst 					: contiguous array of voxels 
							  (externally allocated, length from SQY_LZ4Length)

	Returns 0 if success, another code if there was an error (error codes provided below)

*/
SQY_FUNCTION_PREFIX int SQY_LZ4Decode(const char* src, long srclength, char* dst);
/*
	SQY_Header_Size - Detect length of header stored in src.

	Search for the sqy header in src and save its length in Byte in lenght

	src 					: LZ4 compressed buffer (externally allocated & filled)
	length					: length in bytes of header in compressed buffer

	Returns 0 if success, another code if there was an error (error codes provided below)

*/
SQY_FUNCTION_PREFIX int SQY_Header_Size(const char* src, long* length);
/*
	SQY_Version_Triple - store version.

	Just store the version of sqeazy used. (NB: gives dummy values right now)

	version					: 3 element int array that holds the sqeazy version

	Returns 0 if success, another code if there was an error (error codes provided below)

*/
SQY_FUNCTION_PREFIX int SQY_Version_Triple(int* version);