src/java/src/sqeazy/bindings/SqeazyLibrary.java

	/**
	 * SQY_LZ4Decode - Decompress using LZ4.<br>
	 * Decompresses the source buffer into the destination buffer using LZ4.<br>
	 * The destination buffer should be allocated externally. The first 8 bytes of <br>
	 * the source buffer are not part of the LZ4 compressed buffer but indicate the<br>
	 * length of the original uncompressed buffer.<br>
	 * The necessary buffer length can be obtained by calling SQY_LZ4Length. <br>
	 * src 					: LZ4 compressed buffer (externally allocated)<br>
	 * srclength 				: length in bytes of compressed buffer<br>
	 * dst 					: contiguous array of voxels <br>
	 * (externally allocated, length from SQY_LZ4Length)<br>
	 * Returns 0 if success, another code if there was an error (error codes provided below)<br>
	 * Original signature : <code>int SQY_LZ4Decode(const char*, long, char*)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:330</i>
	 */
	public static int SQY_LZ4Decode(Pointer<Byte > src, @org.bridj.ann.CLong long srclength, Pointer<Byte > dst) {
		return SQY_LZ4Decode(Pointer.getPeer(src), srclength, Pointer.getPeer(dst));
	}
	protected native static int SQY_LZ4Decode(@Ptr long src, @org.bridj.ann.CLong long srclength, @Ptr long dst);
	/**
	 * Original signature : <code>int SQY_Header_Size(const char*, long*)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:332</i>
	 */
	public static int SQY_Header_Size(Pointer<Byte > src, Pointer<org.bridj.CLong > length) {
		return SQY_Header_Size(Pointer.getPeer(src), Pointer.getPeer(length));
	}
	protected native static int SQY_Header_Size(@Ptr long src, @Ptr long length);
	/**
	 * Original signature : <code>int SQY_Version_Triple(int*)</code><br>
	 * <i>native declaration : src/cpp/inc/sqeazy.h:334</i>
	 */
	public static int SQY_Version_Triple(Pointer<Integer > version) {
		return SQY_Version_Triple(Pointer.getPeer(version));
	}
	protected native static int SQY_Version_Triple(@Ptr long version);
}
